# rust-semverx

./: Cargo.toml  Sementic Versioning Xtended for Hybrid Directed Instructed Systen.md  core.rs
src/: core.rs  ffi.rs  normalizer.rs  resolver.rs
src/normalizer/: mod.rs
src/resolver/: graph.rs  mod.rs
